manifests/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: studio-app
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
  - port: 80
    targetPort: 3000
